--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,7 @@
 <div data-controller="hello">
-  <h1 data-target="hello.output"></h1>
   <input data-target="hello.name" type="text">
+
   <button data-action="click->hello#greet">Greet</button>
+
+  <span data-target="hello.output"></span>
 </div>
